@startuml DiagramaClase_Entitati
title Diagrama de clase – Entitati Comirex

skinparam classBackgroundColor #EFF5FF
skinparam classBorderColor #1F6FEB
skinparam classHeaderBackgroundColor #1F6FEB
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #1F6FEB
skinparam linetype ortho
hide methods

abstract class Document {
    + tipDocument : String
    + numarDocument : String
    + dataDocument : Date
    + dataOperare : Date
}

class DocInsotitor {
    + codDocInsot : String
    + mijlocTransport : String
}

class Receptie {
    + codNIR : String
    + nrNIR : String
    + dataReceptie : Date
    + facturaPrimita : Integer
}

class LinieIntrare {
    + cantitate : Double
    + pretAchizitie : Double
    + pretVanzare : Double
    + adaos : Double
}

class Furnizor {
    + codFurnizor : String
    + numeFurnizor : String
    + cui : String
    + adresa : String
    + telefon : String
    + email : String
    + iban : String
    + sold : Double
}

class Gestiune {
    + codGestiune : String
    + denumireGestiune : String
    + numeGestionar : String
    + adresa : String
}

class Produs {
    + codProdus : String
    + denumire : String
    + um : String
    + categorie : String
    + pretVanzare : Double
    + costMediuPonderat : Double
    + stocMinim : Double
}

class Stoc {
    + stocCurent : Double
    + stocInitialLuna : Double
    + stocInitialAn : Double
}

Document        <|-- DocInsotitor

DocInsotitor "1"   *-- "0..*" Receptie    : receptii
Receptie     "1"   *-- "0..*" LinieIntrare : liniiIntrare
DocInsotitor "*"   -->  "1"   Furnizor    : furnizor
DocInsotitor "*"   --> "0..1" DocInsotitor : ref. stornare
Receptie     "*"   -->  "1"   Gestiune    : gestiune
LinieIntrare "*"   -->  "1"   Produs      : produs
Stoc         "*"   -->  "1"   Produs      : produs
Stoc         "*"   -->  "1"   Gestiune    : gestiune

@enduml
